--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 matrix:
   include:
     - scala: 2.10.5
-      script: ./sbt ++$TRAVIS_SCALA_VERSION clean test
+      script: travis_wait ./sbt ++$TRAVIS_SCALA_VERSION clean test
 
     - scala: 2.11.7
-      script: ./sbt ++$TRAVIS_SCALA_VERSION clean test
+      script: travis_wait ./sbt ++$TRAVIS_SCALA_VERSION clean test
